# py-middleware

./: .gitignore  BSV_MIDDLEWARE_SPECIFICATION.md  CHANGELOG.md  CLAUDE.md  CROSS_IMPLEMENTATION_TEST_REPORT.md  PROJECT_PLAN.md  README.md  TEST_SUMMARY_REPORT.md  auth-middleware-test-comparison.md  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_results.txt  update_coverage.py
.github/: dependabot.yml
.github/workflows/: build.yml  workflow.yml
bsv_middleware/: __init__.py  exceptions.py  interfaces.py  py_sdk_bridge.py  types.py  wallet_adapter.py
bsv_middleware/django/: __init__.py  auth_middleware.py  payment_middleware.py  payment_middleware_complete.py  session_manager.py  settings.py  transport.py  utils.py
docs/: API.md  README.md  TYPESCRIPT_PYTHON_API_COMPARISON.md
example/django_example/: requirements.txt
example/django_example/adapter/: payment_middleware_complete.py  transport.py  utils.py
example/django_example/myapp/: views.py
example/django_example/myproject/: settings.py  wsgi.py
examples/django_example/: README.md  TEST_STATUS.md  db.sqlite3  mainnet_settings.py  manage.py  pytest.ini  requirements.txt  test_auth_client.py  testnet_settings.py  testnet_settings_full.py  ts-go-tests.py  ts-tests.py
examples/django_example/adapter/: __init__.py  auth_middleware.py  payment_middleware_complete.py  session_manager.py  settings.py  transport.py  utils.py
examples/django_example/django_adapter/: auth_middleware.py  payment_middleware.py  payment_middleware_complete.py  settings.py  transport.py
examples/django_example/myapp/: urls.py  views.py
examples/django_example/myproject/: settings.py  urls.py
examples/testnet_setup/: .gitignore  MAINNET_GUIDE.md  README.md  create_mainnet_wallet.py  create_testnet_wallet.py  env.testnet.example  quick_create_mainnet_wallet.py  test_testnet_connection.py
tests/: COMPREHENSIVE_TEST_REPORT.md  TEST_ARCHITECTURE.md  __init__.py  comprehensive_test_report.json  django_example_test_settings.py  run_comprehensive_tests.py  settings.py  test_basic.py  test_bsv_auth_flow.py  test_bsv_payment_flow.py  test_code_review_fixes.py  test_django_example_comprehensive.py  test_express_compatibility.py  test_missing_features.py  test_performance.py  test_phase2_3_complete.py  test_py_sdk_basic.py  test_py_sdk_integration.py  test_real_bsv_auth.py  test_real_bsv_payment.py  test_real_middleware_integration.py  test_transport_complete.py  urls.py
tests/compliance/: __init__.py  test_brc_protocol.py  test_express_compatibility.py
tests/features/: __init__.py  test_multipart_upload.py  test_text_plain_support.py
tests/integration/: test_middleware_auth.py  test_middleware_auth_missing.py
tests/testnet/: INTEGRATION_TEST_SETUP.md  README.md  __init__.py  test_auth_flow_testnet.py  test_hello_bsv_mainnet.py  test_live_server_integration_testnet.py  test_payment_flow_testnet.py
